--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         font-family: "Cursive", Arial, sans-serif;
         text-align: center;
         padding: 50px;
-        background-color: #fff; /* White background */
+        background-color: #fff;
         color: #333;
       }
       h1 {
