--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     </style>
   </head>
   <body>
-    <h1>هل ترغبين في تمشية مسائية جميلة معًا؟</h1>
+    <h1>حبيبتي ساره، هل ترغبين في تمشية مسائية جميلة معًا؟</h1>
     <div class="question">اختاري أحد الأماكن:</div>
     <button class="button" onclick="sendAnswer('مجمع ويرهاوس')">
       مجمع ويرهاوس
